# diff

./: CMakeLists.txt  config  static.c
